tests/baselines/reference/emptyTypeArgumentList.errors.txt
==== tests/cases/compiler/emptyTypeArgumentList.ts (2 errors) ====
    function foo<T>() { }
    foo<>();
       ~~
!!! error TS1099: Type argument list cannot be empty.
    ~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.